{
  "@@locale": "en",
  "appTitle": "PixPricer",
  "hello": "Hello",
  "scanButton": "Scan Price Tag",
  "galleryButton": "Choose from Gallery",
  "totalLabel": "Total",
  "discountLabel": "Discount",
  "cameraScreenTitle": "Camera",
  "cartListTitle": "Cart",
  "reconcileScreenTitle": "Reconcile",
  "settingsButton": "Settings",
  "languageLabel": "Language",
  "cancelButton": "Cancel",
  "confirmButton": "Confirm",
  "cartEmptyMessage": "No items in cart",
  "reconcileButton": "Reconcile Now",
  "exportButton": "Export"
}
